force-app/main/default/objects/Period__c/Period__c.object-meta.xml
<CustomObject>
    <label>Period</label>
    <nameField>
        <label>Period Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>