force-app/main/default/objects/Period__c/fields/Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_Mins__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Duration(Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>