force-app/main/default/objects/Period__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Start_Time__c + (  Duration_Mins__c /1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>