force-app/main/default/objects/Period__c/fields/Is_Break__c.field-meta.xml
<CustomField>
    <fullName>Is_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Break</label>
    <type>Checkbox</type>
</CustomField>