force-app/main/default/objects/Period__c/fields/Teacher_Class__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher Class</label>
    <referenceTo>Teacher_Class__c</referenceTo>
    <relationshipLabel>Periods</relationshipLabel>
    <relationshipName>Periods</relationshipName>
    <type>Lookup</type>
</CustomField>